<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, PugAndroidActivity!</string>
    <string name="app_name">PickUpGames</string>
    <string name="sport">Sport</string>
    <string name="location">Location</string>
    <string name="findLocation">Find on Map</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="maxPlayers">Number of Players</string>
    <string name="visibility">Visibility</string>
    <string name="pub">Public</string>
    <string name="priv">Private</string>
    <string name="sport_prompt">Choose a sport:</string>
    <string-array name="sports_array">
    	<item>Basketball</item>
    	<item>Baseball</item>
    	<item>Football</item>
    	<item >Soccer</item>
    </string-array>
    <string name="create">Create Game</string>
    <string name="create_label">Create a Game</string>
    <string name="search_label">Search for Games</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter a short description for your new game here</string>
    <string name="search">Search</string>
    <string name="radius">Search Radius (miles)</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="favSport">Favorite Sport</string>
    <string-array name="gender_array">
        <item >Male</item>
        <item >Female</item>
    </string-array>
    <string name="allGames">Search for all game types?</string>
    <string name="selectGame">Select a Game</string>
    <string name="allGameTypes">All Games</string>
    <string name="edit">Edit Game</string>
    <string name="profile_label">User Profile</string>
    <string name="profile_joinedgames_label">Games You\'ve Joined</string>
    <string name="list_label">Game List</string>
    <string name="edit_label">Edit Game</string>
    <string name="details_label">Game Details</string>
    <string name="leave">Leave Game</string>
    <string name="cancel">Cancel</string>
    <string-array name="no_games">
        <item >No Games to Show!</item>
    </string-array>
    <string name="join">Join Game</string>
</resources>
