<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/locationTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/location" >
    </TextView>

    <EditText
        android:id="@+id/locationEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/locationTextView2" >

        <requestFocus >
        </requestFocus>
    </EditText>

    <TextView
        android:id="@+id/radiusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/locationEditText2"
        android:text="@string/radius" />

    <EditText
        android:id="@+id/radiusEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radiusTextView"
        android:inputType="number" />
    
    <TextView
        android:id="@+id/allGamesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radiusEditText"
        android:text="@string/allGames" />
    
    <ToggleButton 
        android:id="@+id/allGamesToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/allGamesTextView"
        android:textOn="@string/allGameTypes"
        android:textOff="@string/selectGame"
        android:checked="true" />
    
    <TextView
        android:id="@+id/sportSearchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/allGamesToggleButton"
        android:text="@string/sport" />

    <Spinner
        android:id="@+id/sportSearchSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/sportSearchTextView" >
    </Spinner>

    <Button
        android:id="@+id/searchSubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/search" >
    </Button>

</RelativeLayout>